@@ -945,6 +945,9 @@ name|run
 argument_list|(
 name|cmd
 argument_list|)
+operator|.
+name|getResponseCode
+argument_list|()
 expr_stmt|;
 if|if
 condition|(
@@ -1141,6 +1144,9 @@ name|run
 argument_list|(
 name|cmd_1
 argument_list|)
+operator|.
+name|getResponseCode
+argument_list|()
 expr_stmt|;
 block|}
 block|}
