@@ -21,26 +21,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|beans
-operator|.
-name|XMLDecoder
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|beans
-operator|.
-name|XMLEncoder
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|io
 operator|.
 name|DataInput
@@ -53,47 +33,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|FileInputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|FileOutputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|InputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|OutputStream
 import|;
 end_import
 
@@ -860,6 +800,24 @@ operator|.
 name|processors
 operator|.
 name|CommandProcessor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|processors
+operator|.
+name|CommandProcessorResponse
 import|;
 end_import
 
@@ -2267,31 +2225,8 @@ name|plan
 return|;
 block|}
 specifier|public
-name|int
+name|CommandProcessorResponse
 name|run
-parameter_list|(
-name|String
-name|command
-parameter_list|)
-block|{
-name|DriverResponse
-name|response
-init|=
-name|runCommand
-argument_list|(
-name|command
-argument_list|)
-decl_stmt|;
-return|return
-name|response
-operator|.
-name|getResponseCode
-argument_list|()
-return|;
-block|}
-specifier|public
-name|DriverResponse
-name|runCommand
 parameter_list|(
 name|String
 name|command
@@ -2322,7 +2257,7 @@ condition|)
 block|{
 return|return
 operator|new
-name|DriverResponse
+name|CommandProcessorResponse
 argument_list|(
 name|ret
 argument_list|,
@@ -2346,7 +2281,7 @@ condition|)
 block|{
 return|return
 operator|new
-name|DriverResponse
+name|CommandProcessorResponse
 argument_list|(
 name|ret
 argument_list|,
@@ -2358,108 +2293,11 @@ return|;
 block|}
 return|return
 operator|new
-name|DriverResponse
+name|CommandProcessorResponse
 argument_list|(
 name|ret
 argument_list|)
 return|;
-block|}
-comment|/**    * Encapsulates the basic response info returned by the Driver. Typically    *<code>errorMessage</code> and<code>SQLState</code> will only be set if the    *<code>responseCode</code> is not 0.    */
-specifier|public
-class|class
-name|DriverResponse
-block|{
-specifier|private
-specifier|final
-name|int
-name|responseCode
-decl_stmt|;
-specifier|private
-specifier|final
-name|String
-name|errorMessage
-decl_stmt|;
-specifier|private
-specifier|final
-name|String
-name|SQLState
-decl_stmt|;
-specifier|public
-name|DriverResponse
-parameter_list|(
-name|int
-name|responseCode
-parameter_list|)
-block|{
-name|this
-argument_list|(
-name|responseCode
-argument_list|,
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
-specifier|public
-name|DriverResponse
-parameter_list|(
-name|int
-name|responseCode
-parameter_list|,
-name|String
-name|errorMessage
-parameter_list|,
-name|String
-name|SQLState
-parameter_list|)
-block|{
-name|this
-operator|.
-name|responseCode
-operator|=
-name|responseCode
-expr_stmt|;
-name|this
-operator|.
-name|errorMessage
-operator|=
-name|errorMessage
-expr_stmt|;
-name|this
-operator|.
-name|SQLState
-operator|=
-name|SQLState
-expr_stmt|;
-block|}
-specifier|public
-name|int
-name|getResponseCode
-parameter_list|()
-block|{
-return|return
-name|responseCode
-return|;
-block|}
-specifier|public
-name|String
-name|getErrorMessage
-parameter_list|()
-block|{
-return|return
-name|errorMessage
-return|;
-block|}
-specifier|public
-name|String
-name|getSQLState
-parameter_list|()
-block|{
-return|return
-name|SQLState
-return|;
-block|}
 block|}
 specifier|private
 name|List
