@@ -1,0 +1,123 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|processors
+package|;
+end_package
+
+begin_comment
+comment|/**  * Encapsulates the basic response info returned by classes the implement the  *<code>CommandProcessor</code> interfaace. Typically<code>errorMessage</code>  * and<code>SQLState</code> will only be set if the<code>responseCode</code>  * is not 0.  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|CommandProcessorResponse
+block|{
+specifier|private
+name|int
+name|responseCode
+decl_stmt|;
+specifier|private
+name|String
+name|errorMessage
+decl_stmt|;
+specifier|private
+name|String
+name|SQLState
+decl_stmt|;
+specifier|public
+name|CommandProcessorResponse
+parameter_list|(
+name|int
+name|responseCode
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|responseCode
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|CommandProcessorResponse
+parameter_list|(
+name|int
+name|responseCode
+parameter_list|,
+name|String
+name|errorMessage
+parameter_list|,
+name|String
+name|SQLState
+parameter_list|)
+block|{
+name|this
+operator|.
+name|responseCode
+operator|=
+name|responseCode
+expr_stmt|;
+name|this
+operator|.
+name|errorMessage
+operator|=
+name|errorMessage
+expr_stmt|;
+name|this
+operator|.
+name|SQLState
+operator|=
+name|SQLState
+expr_stmt|;
+block|}
+specifier|public
+name|int
+name|getResponseCode
+parameter_list|()
+block|{
+return|return
+name|responseCode
+return|;
+block|}
+specifier|public
+name|String
+name|getErrorMessage
+parameter_list|()
+block|{
+return|return
+name|errorMessage
+return|;
+block|}
+specifier|public
+name|String
+name|getSQLState
+parameter_list|()
+block|{
+return|return
+name|SQLState
+return|;
+block|}
+block|}
+end_class
+
+end_unit
+
