@@ -187,7 +187,7 @@ name|init
 parameter_list|()
 block|{   }
 specifier|public
-name|int
+name|CommandProcessorResponse
 name|run
 parameter_list|(
 name|String
@@ -280,9 +280,11 @@ name|oldOut
 argument_list|)
 expr_stmt|;
 return|return
-operator|(
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 name|ret
-operator|)
+argument_list|)
 return|;
 block|}
 catch|catch
@@ -319,7 +321,11 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 literal|1
+argument_list|)
 return|;
 block|}
 block|}
