@@ -277,7 +277,7 @@ name|init
 parameter_list|()
 block|{   }
 specifier|public
-name|int
+name|CommandProcessorResponse
 name|run
 parameter_list|(
 name|String
@@ -322,7 +322,11 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 return|return
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 literal|0
+argument_list|)
 return|;
 block|}
 if|if
@@ -347,7 +351,11 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 return|return
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 literal|0
+argument_list|)
 return|;
 block|}
 name|String
@@ -393,9 +401,11 @@ name|nwcmd
 argument_list|)
 expr_stmt|;
 return|return
-operator|(
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 literal|0
-operator|)
+argument_list|)
 return|;
 block|}
 elseif|else
@@ -550,11 +560,19 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 return|return
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 literal|1
+argument_list|)
 return|;
 block|}
 return|return
+operator|new
+name|CommandProcessorResponse
+argument_list|(
 literal|0
+argument_list|)
 return|;
 block|}
 block|}
