@@ -1742,6 +1742,9 @@ name|run
 argument_list|(
 name|loadCmd
 argument_list|)
+operator|.
+name|getResponseCode
+argument_list|()
 expr_stmt|;
 if|if
 condition|(
@@ -1789,6 +1792,9 @@ name|run
 argument_list|(
 name|createTableCmd
 argument_list|)
+operator|.
+name|getResponseCode
+argument_list|()
 expr_stmt|;
 if|if
 condition|(
@@ -3230,6 +3236,9 @@ argument_list|(
 name|tname
 argument_list|)
 argument_list|)
+operator|.
+name|getResponseCode
+argument_list|()
 return|;
 block|}
 specifier|public
